--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>Hello, I am learning HTML!</p>
+    <img src="https://via.placeholder.com/150" placeholder="images">
+    <a href="https://www.google.com" target="_blank">Visit Google</a>
 </body>
 </html>
