--- a/index2.html
+++ b/index2.html
@@ -10,5 +10,17 @@
     <p>Hello, I am learning HTML!</p>
     <img src="https://via.placeholder.com/150" placeholder="images">
     <a href="https://www.google.com" target="_blank">Visit Google</a>
+    <ol>
+        <h2>My favourite hobbies: </h2>
+        <li>Reading</li>
+        <li>Drawing</li>
+        <li>Cooking</li>
+    </ol>
+    <ul>
+        <h2>My favourite foods: </h2>
+        <li>Pizza</li>
+        <li>Burger</li>
+        <li>Sushi</li>
+    </ul>
 </body>
 </html>
